# usenauty

./: CMakeLists.txt  README.md
cmd_test/: comline_test.py
cmd_test/cabon_nano_tube/: cabon_nano_tube.py
cmd_test/fullerene/: README.md  base_C60_000001812opted_2addons.out  base_C60_000001812opted_3addons.out  base_C60_000001812opted_4addons.out  base_C60_000001812opted_5addons.out  mode_test.py  speed_test.py
cmd_test/graphene_nano_ribbon/: graphene_nano_ribbon.py
include/: cagesearch.h  cmdline.h  graph6.hpp  gtools.h  gutils.h  naugroup.h  naurng.h  nausparse.h  nautaux.h  nautinv.h  naututil.h  nauty.h  nautycliquer.h  planarity.h  schreier.h  time.h  times.h  traces.h  unistd.h  wait.h
libnauty/: CMakeLists.txt  NRswitchg.c  addedgeg.c  amtog.c  assembleg.c  biplabg.c  blisstog.c  catg.c  checks6.c  complg.c  converseg.c  copyg.c  cubhamg.c  deledgeg.c  delptg.c  directg.c  dretodot.c  dretog.c  edgetransg.c  genbg.c  geng.c  genquarticg.c  genrang.c  genspecialg.c  gentourng.c  gentreeg.c  gtnauty.c  gtools-h.in  gtools.c  gutil1.c  gutil2.c  hamheuristic.c  labelg.c  linegraphg.c  listg.c  makefile.origin  multig.c  naugraph.c  naugroup.c  nausparse.c  (+30 more)
src/: CMakeLists.txt  cagesearch.cpp  main.cpp  mytest.c
